# dispo

./: README.md  manage.py  pyproject.toml
app/: admin.py  models.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20211112_0638.py
dispo/: asgi.py  settings.py  urls.py  wsgi.py
